# blog

./: .gitignore  Cargo.toml  LICENSE  build.rs  run_dev.bat  run_dev.sh
articles/: mindstorms.md  static_web_content.md  test.md
src/: blog.rs  comments.rs  main.rs  meta.toml  quotes.toml  style.scss
static/: style.css
templates/: 404.html  about.html  archive.html  article-header.html  article-list-item.html  article.html  comment_approvals.html  error.html  index.html  layout.html  stats.html  tag.html
