[package]
name = "blog"
version = "0.1.0"
authors = ["Santtu Keskinen <santtu.keskinen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.3.0"
actix-service = "1.0.6"
actix-web = "3.0.2"
askama = "0.10.3"
toml = "0.5.6"
serde = "1.0.116"
serde_derive = "1.0.116"
markdown = "0.3.0"
chrono = "0.4.19"

[build-dependencies]
sass-rs = "0.2.2"

[[bin]]
name = "file-notify"
